--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="title">SELECT YOUR CHARACTERS</h1>
-                        <h4 class="title title__desc">Player <span id="playerNum">1</span> - Select Your Character</h4>
+                        <h4 class="title title__desc" id="playerInstruction">Player <span id="playerNum">1</span> - Select Your Character</h4>
                     </div>
                 </div>
             </div>
@@ -107,6 +107,14 @@
                     </div>
 
                     <div class="col-sm-1"></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 center">
+                        <button class="startBtn" onclick="startGame();">START THE GAME</button>
+                    </div>
                 </div>
             </div>
 
