added fail on 15

--- a/game.html
+++ b/game.html
@@ -35,8 +35,8 @@
         <header></header>
 
         <main class="board">
-            <button id="rollOne">Click here</button>
-
+            <button id="rollOne">Roll Player 1</button>
+            <button id="rollTwo">Roll Player 2</button>
 
         </main>
 
