--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 center">
-                            <h1 class="main__title">Game of Thrones</h1>
+                            <img src="img/logo.png" id="boardLogo" />
                             <h2 class="main__title--large">The Board Game</h2>
-                            <a href="character.html"><button class="main__btn">Play Game</button></a>
+                            <a href="character.html"><button class="main__btn">Play Game <img src="img/play.png" style="width: 32px;"></button></a>
                         </div>
                     </div>
 
                     <div class="row bottom__row">
                         <div class="col-sm-6">
                             <div class="player">
-                                    <i class="fas fa-volume-mute" id="volumeOff"></i>
-                                <i class="fas fa-volume-up" id="volumeOn"></i>
+                                    <img src="img/nosound.png" style="width: 32px;"id="volumeOff">
+                                <img src="img/sound.png" style="width: 32px;" id="volumeOn">
                             </div>
 
                             <audio id="audioFile" loop autoplay>
