--- a/congrats.html
+++ b/congrats.html
@@ -1,5 +1,58 @@
+<!DOCTYPE html>
+
 <html>
+    <head>
+        <title>GOT - The Board Game</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="A Custom Board Game for Game Of Thrones Fans">
+        <meta name="keywords" content="GOT, Game Of Thrones, Boardgame, Online">
+        <meta name="author" content="Henrik Lysnes">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!------- Bootstrap CSS ---->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <!------- Bootstrap JS ----->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+         <!-------- CUSTOM CSS -------->
+         <link href="css/style.css" rel="stylesheet">
+
+         <!---------- Font Awesome ------->
+         <script src="https://kit.fontawesome.com/117c523adf.js" crossorigin="anonymous"></script>
+    </head>
+
     <body>
-        <h2>GZ</h2>
+       
+        <div class="mainStart">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 center">
+                        <img src="img/logo.png" id="boardLogo" />
+                        <br />
+
+                        <div class="sp-container">
+                            <div class="sp-content">
+                                <div class="sp-globe">
+                                    <h2 class="frame-1">THE WINNER IS</h2>
+                                    <h2 class="frame-2" id="winnerName"></h2>
+                                    <h2 class="frame-3" id="winnerPlayer"></h2>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <button id="playAgain">PLAY AGAIN!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <script src="js/winner.js"></script>
+        </footer>
     </body>
 </html>
